<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_bottomsheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center"
        android:background="@drawable/background_01"
        android:backgroundTint="@color/bottom_dialog_view" />

    <LinearLayout
        android:id="@+id/albumDialogLy_thumbnail_columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:src="@drawable/icon_thumbnail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_87"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumDialogLy_view_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/albumDialogImg_view_as"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:src="@drawable/icon_view_as_list" />

        <TextView
            android:id="@+id/albumDialogTxt_view_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_88"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/sf_medium"
        android:gravity="center_vertical"
        android:text="@string/str_86"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:id="@+id/albumDialogLy_last_modified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_last_modified"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_81"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumDialogLy_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_name"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_108"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumDialogLy_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_size"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_106"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumDialogLy_created_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_created_date"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_107"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/view_color" />

    <LinearLayout
        android:id="@+id/albumDialogLy_ascending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_ascending"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_109"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumDialogLy_descending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <CheckBox
            android:id="@+id/albumDialogCb_descending"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/dialog_checkbox"
            android:button="@null"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_regular"
            android:text="@string/str_110"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/background_03"
            android:fontFamily="@font/sf_semi_bold"
            android:foreground="@drawable/bg_ripple_squre"
            android:gravity="center"
            android:lines="1"
            android:text="@string/str_26"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/background_01"
            android:fontFamily="@font/sf_semi_bold"
            android:foreground="@drawable/bg_ripple_squre"
            android:gravity="center"
            android:lines="1"
            android:text="@string/str_67"
            android:textColor="@color/white_to_white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>
